specs/blueprints/errors/validation/expected_single_attribute.eno
# Expecting an attribute but getting two attributes

-- input
field:
attribute = value
attribute = value
-- input

-- javascript
parse(input).field('field').attribute('attribute');
-- javascript

-- php
Enolib\Parser::parse($input)->field('field')->attribute('attribute');
-- php

-- python
enolib.parse(input).field('field').attribute('attribute')
-- python

-- ruby
Enolib.parse(input).field('field').attribute('attribute')
-- ruby

## ValidationError

-- text
This field was expected to contain only a single attribute with the key 'attribute'.
-- text

-- snippet
   Line | Content
      1 | field:
 >    2 | attribute = value
 >    3 | attribute = value
-- snippet

selection: [1,0] => [1,17]

# Expecting an attribute but getting two attributes with comments, empty lines and continuations

-- input
field:
> comment
attribute = value
\ continuation
\ continuation

> comment
attribute = value
| continuation
-- input

-- javascript
parse(input).field('field').attribute('attribute');
-- javascript

-- php
Enolib\Parser::parse($input)->field('field')->attribute('attribute');
-- php

-- python
enolib.parse(input).field('field').attribute('attribute')
-- python

-- ruby
Enolib.parse(input).field('field').attribute('attribute')
-- ruby

## ValidationError

-- text
This field was expected to contain only a single attribute with the key 'attribute'.
-- text

-- snippet
   Line | Content
      1 | field:
      2 | > comment
 >    3 | attribute = value
 *    4 | \ continuation
 *    5 | \ continuation
      6 | 
      7 | > comment
 >    8 | attribute = value
 *    9 | | continuation
-- snippet

selection: [2,0] => [4,14]
